Fixed: - Synchronisation on data layer not on service layer that can be a cause of unexpected data changes with multithreading requests - Data modification outside of synchronised block, modification by object link instead of immutable data approach - Dependencies on object instances instead of interfaces - Duplicated code, unused method results - Data leaks between logic layers for Widget class - Different approach for initialisation of POJO objects - unused annotations (like @Slf4j)